# harness-guard

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml
.github/workflows/: ci.yml  doc-drift.yml  release-watch.yml
crates/harness-guard-cli/: Cargo.toml
crates/harness-guard-cli/src/: capabilities.rs  diagnostics.rs  explain.rs  main.rs  redact.rs  render_json.rs  render_term.rs
crates/harness-guard-cli/tests/: capabilities.rs  cli_surface.rs  hostile.rs  scan_fixtures.rs  scan_snapshots.rs
crates/harness-guard-cli/tests/common/: mod.rs
crates/harness-guard-cli/tests/goldens/: capabilities.expected.json
crates/harness-guard-cli/tests/snapshots/: capabilities__capabilities_table.snap  scan_snapshots__claude_risky_unset.snap  scan_snapshots__hardened_verbose.snap  scan_snapshots__missing.snap  scan_snapshots__mixed_codex_pass_claude_degraded.snap  scan_snapshots__risky_unset.snap  scan_snapshots__risky_unset_quiet.snap  scan_snapshots__stale_banner.snap  scan_snapshots__stale_out_of_range.snap  scan_snapshots__unknown_value.snap
crates/harness-guard-core/: Cargo.toml  clippy.toml
crates/harness-guard-core/src/: discovery.rs  engine.rs  evaluate.rs  harness.rs  lib.rs  parse.rs  parse_json.rs  readfs.rs  scan.rs  version.rs
crates/harness-guard-core/tests/: engine_hostility.rs
crates/harness-guard-rules/: Cargo.toml  build.rs
crates/harness-guard-rules/src/: lib.rs  loader.rs  report.rs  schema.rs
crates/harness-guard-rules/tests/: embedding.rs  fixture_validation.rs  report_validation.rs  schema_validation.rs  tripwires.rs
data/: README.md  audit-commands.yaml  tools-comparison.json
data/config-examples/: aider-hardened.sh  cursor-privacy-mode.md  grok-build.example.toml
docs/: agent-guide.md
docs/blog/: codex-cli-privacy-security-research.md  codex-cli-privacy-security-technical-draft.md
docs/maintenance/: runbook.md
docs/product/: decision-and-strategy.md  implementation-plan.md
docs/research/: AI_CODING_TOOLS_PRIVACY_RESEARCH_REPORT.md  INDEX.md  app-building-recommendations.md  cli-ux-research-2026-07-14.md  competitive-landscape-2026-07-14.md  maintainability-strategy-2026-07-14.md  sources-and-references.md  synthesis-2026-07-14.md  verification-audit-2026-07-13.md
docs/research/per-tool/: cursor.md  grok-build.md
docs/research/protocols/: grok-build-cleanroom.md
docs/superpowers/handoffs/: 2026-07-17-0.0.1-multi-harness-handoff.md  2026-07-17-0.0.1-release-checklist.md  2026-07-17-0.0.1-whole-feature-review.md
docs/superpowers/plans/: 2026-07-14-harness-guard-v1-thin-slice-review-findings.md  2026-07-14-harness-guard-v1-thin-slice.md  2026-07-16-harness-guard-0.0.1-multi-harness.md
docs/superpowers/specs/: 2026-07-14-harness-guard-v1-thin-slice-design.md  2026-07-16-harness-guard-0.0.1-multi-harness-design.md
fixtures/claude-code/deep-nesting/: expected.json
fixtures/claude-code/duplicate-keys/: expected.json
fixtures/claude-code/float-where-integer/: expected.json
fixtures/claude-code/hardened/: expected.json
fixtures/claude-code/huge-number/: expected.json
fixtures/claude-code/malformed-json/: expected.json
fixtures/claude-code/minimal/: expected.json
fixtures/claude-code/missing/: expected.json
fixtures/claude-code/non-utf8/: expected.json
fixtures/claude-code/oversized/: expected.json
fixtures/claude-code/permission-denied/: expected.json
fixtures/claude-code/risky-explicit/: expected.json
fixtures/claude-code/risky-unset/: expected.json
fixtures/claude-code/secret-shaped/: expected.json
fixtures/claude-code/symlink-config/: expected.json
fixtures/codex/deep-nesting/: expected.json
freshness/: last-seen.json  url-hashes.json
notes/: research-decisions.md  session-history.md
rules/: README.md  ruleset.json
rules/claude-code/: cleanup-period-01.json  error-reporting-opt-out-01.json  feedback-command-opt-out-01.json  feedback-survey-opt-out-01.json  telemetry-opt-out-01.json
rules/codex/: analytics-01.json  feedback-01.json  history-persist-01.json  otel-prompt-log-01.json
rules/grok-build/: feedback-01.json  otel-prompt-log-01.json  telemetry-01.json  trace-upload-01.json
schemas/: capabilities.schema.json  fixture.schema.json  report.schema.json  rule.schema.json  source.schema.json
scripts/freshness/: extract-urls.sh  normalize.sh
scripts/no-egress/: run-macos.sh  scan.sb
(+62 files in other folders)
